<resources>
    <string name="app_name">Pontos Turísticos</string>
    <string name="adicionar_ponto_turistico">Adicionar Ponto Turístico</string>
    <string name="cadastrar_ponto_turistico">Cadastrar Ponto Turístico</string>
    <string name="editar_ponto_turistico">Editar Ponto Turístico</string>
    <string name="nome_ponto_turistico">Nome</string>
    <string name="descricao_ponto_turistico">Descrição</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="voltar">Voltar</string>
    <string name="padrao">0.0</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="listar_pontos_turisticos">Listar Pontos Turísticos</string>
    <string name="endereco">Endereço</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="configuracoes_aplicativo">Configurações do Aplicativo</string>
    <!-- Preference Titles -->
    <string name="maps_header">Mapa</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="zoom_title">Zoom padrão</string>
    <string name="tipo_title">Tipo de mapa padrão</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="foto_ponto_turistico">Foto Ponto Turístico</string>
    <string name="adicionar_imagem">Adicionar Imagem</string>
    <string name="buscar_ponto_turistico">Buscar ponto turístico</string>
</resources>